# nanopt

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md
ext/: CMakeLists.txt
include/nanopt/: nanopt.h
include/nanopt/accelerators/: bvh.h
include/nanopt/bsdfs/: diffuse.h  fresnelspecular.h  mirror.h  specular.h
include/nanopt/bxdfs/: diffuse.h  fresnelspecular.h  microfacetreflection.h  mirror.h  specular.h
include/nanopt/cameras/: perspective.h
include/nanopt/core/: accel.h  bsdf.h  bxdf.h  camera.h  distrib.h  distribution1d.h  distribution2d.h  film.h  frame.h  fresnel.h  integrator.h  interaction.h  light.h  material.h  mesh.h  microfacet.h  parallel.h  primitive.h  ray.h  sampler.h  sampling.h  scene.h  spectrum.h  timer.h  triangle.h  visibilitytester.h
include/nanopt/integrators/: ao.h  normal.h  path.h
include/nanopt/lights/: diffuse.h  infinite.h  point.h
include/nanopt/materials/: glass.h  matte.h  mirror.h  plastic.h
include/nanopt/math/: bounds2.h  bounds3.h  math.h  matrix4.h  vector2.h  vector3.h
include/nanopt/microfacets/: beckmann.h
include/nanopt/samplers/: random.h
include/nanopt/utils/: imageio.h  objloader.h  plyloader.h
src/accelerators/: bvh.cpp
src/core/: distribution1d.cpp  fresnel.cpp  integrator.cpp  interaction.cpp  mesh.cpp  parallel.cpp  triangle.cpp  visibilitytester.cpp
src/integrators/: path.cpp
src/main/: ajax.cpp  ao.cpp  bunny.cpp  cbox.cpp  dragon.cpp  fireplace-room.cpp  mis.cpp  plastic.cpp  point.cpp  table.cpp
src/math/: matrix4.cpp
src/microfacets/: beckmann.cpp
src/tests/: imageio-test.cpp
src/utils/: imageio.cpp  objloader.cpp  plyloader.cpp
